--- a/app/templates/collection.html
+++ b/app/templates/collection.html
@@ -10,8 +10,7 @@
           
           <ul>
             {% for item in contents %}
-              <li>
-                <a href={{item[0]}}>{{item[1]}}</a>
+              <li> {{item}}
               </li>
             {% endfor %}
           </ul>
