--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -10,6 +10,9 @@
         <form method="POST" action="/upload" enctype="multipart/form-data">
           <input type="file" name="file">
           <input type="submit" value="Upload">
+          <br>
+          <input type="checkbox" value="private" name="private">
+          <label for="private"> private</label><br>
         </form>
       </div>
     </div>
