--- a/app/templates/collection.html
+++ b/app/templates/collection.html
@@ -13,6 +13,7 @@
               <li> 
                 {{filename}}
                 <a href="/{{username}}/{{filename}}">View</a>
+                <a href="/delete/{{username}}/{{filename}}">Delete</a>
               </li>
             {% endfor %}
           </ul>
