--- a/app/templates/collection.html
+++ b/app/templates/collection.html
@@ -14,6 +14,7 @@
                 {{filename}}
                 <a href="/{{username}}/{{filename}}">View</a>
                 <a href="/delete/{{username}}/{{filename}}">Delete</a>
+                <a href="/update-page/{{username}}/{{filename}}">Update</a>
               </li>
             {% endfor %}
           </ul>
