--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    <div class="content">
-      <h1>Upload your files to the AWS S3 Bucket</h1>
-      <div>
-        <h3>Upload your file here:</h3>
-        <form method="POST" action="/upload" enctype="multipart/form-data">
-          <input type="file" name="file">
-          <input type="submit" value="Upload">
-          <br>
-          <input type="checkbox" value="private" name="private">
-          <label for="private"> private</label><br>
-        </form>
-      </div>
+{% extends "base.html" %} {% block title %}Form{% endblock %} {% block content
+  %}
+  <div class="content">
+    <h1>Upload your files to the AWS S3 Bucket</h1>
+    <div>
+      <h3>Upload your file here:</h3>
+      <form method="POST" action="/upload" enctype="multipart/form-data">
+        <input type="file" name="file">
+        <input type="submit" value="Upload">
+        <br>
+        <input type="checkbox" value="private" name="private">
+        <label for="private"> private</label><br>
+      </form>
     </div>
-  </body>
-</html>
+  </div>
+  {% endblock %}
