--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,38 +1,37 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Display images</title>
-  </head>
-  <body>
-    <div class="content">
-        <div>
-          <h3>Here are media files inside the S3 bucket:</h3>
-          
-          <ul>
-            {% for filename in contents %}
-              <li> 
-                {{filename}}
-                <a href="/{{username}}/{{filename}}">View</a>
-                <a href="/delete/{{username}}/{{filename}}">Delete</a>
-                <a href="/update-page/{{username}}/{{filename}}">Update</a>
-                <a href="/{{username}}/{{filename}}" download={{filename}}>Download</a>
-                <button onclick="copyToClipboard('https://www.thegagali.com/{{username}}/{{filename}}')">Copy Link</button>
+{% extends "base.html" %} {% block title %}Form{% endblock %} {% block content
+  %}
+  <div class="content">
+    <div>
+      <h3>Here are media files inside the S3 bucket:</h3>
+      
+      <ul>
+        {% for filename in contents %}
+          <li> 
+            {{filename}}
+            <a href="/{{username}}/{{filename}}">View</a>
+            <a href="/delete/{{username}}/{{filename}}">Delete</a>
+            <a href="/update-page/{{username}}/{{filename}}">Update</a>
+            <a href="/{{username}}/{{filename}}" download={{filename}}>Download</a>
+            <button onclick="copyToClipboard('https://www.thegagali.com/{{username}}/{{filename}}')">Copy Link</button>
 
-              </li>
-            {% endfor %}
-          </ul>
-        </div>
+          </li>
+        {% endfor %}
+      </ul>
     </div>
-    <script>
-      function copyToClipboard(link) {
-        const el = document.createElement('textarea');
-        el.value = link;
-        document.body.appendChild(el);
-        el.select();
-        document.execCommand('copy');
-        document.body.removeChild(el);
-        alert('Link copied to clipboard!');
-      }
-      </script>
-  </body>
-</html>
+</div>
+  {% endblock %}
+
+  {% block javascript %}
+  <script>
+    function copyToClipboard(link) {
+      const el = document.createElement('textarea');
+      el.value = link;
+      document.body.appendChild(el);
+      el.select();
+      document.execCommand('copy');
+      document.body.removeChild(el);
+      alert('Link copied to clipboard!');
+    }
+    </script>
+
+  {% endblock %}
