--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
   <div class="content">
     <div>
       <h3>Welcome {{username}}! All your files are here</h3>
-      <table>
+      <table cellspacing="10">
         <thead>
           <tr>
             <th>filename</th>
