--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,23 @@
     />
 
     <title>{% block title %}Home{% endblock %}</title>
+    <style>
+        table {
+          border-collapse: collapse;
+          width: 100%;
+        }
+        td, th {
+          padding: 8px;
+          text-align: left;
+          border: 1px solid #ddd;
+        }
+        th {
+          background-color: #f2f2f2;
+        }
+        td {
+          margin: 5px;
+        }
+      </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
