--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,6 +36,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <h3>GAGALI</h3>
       <button
         class="navbar-toggler"
         type="button"
