--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -22,7 +22,7 @@
                 <p>Our pricing plans are flexible and affordable, with no hidden fees or charges. it is actually free</p>
             </div>
         </div>
-        <div><a href="/sign-up">Sign up or log in</a></div>
+        <div><a href="/login">Sign up or log in</a></div>
     </section>
 </main>
     {% endblock %}
