--- a/app/templates/logs.html
+++ b/app/templates/logs.html
@@ -13,7 +13,7 @@
             <tbody>
               {% for event in events %}
                 <tr>
-                  <td>{{ event.time }}</td>
+                  <td>{{ event.time }} ET</td>
                   <td>{{ event.ip_address }}</td>
                 </tr>
               {% endfor %}
