--- a/app/templates/logs.html
+++ b/app/templates/logs.html
@@ -4,6 +4,7 @@
         <div>
           <h6>Here are the latest views of {{filename}}</h6>
           <table>
+            {{events}}
             <thead>
               <tr>
                 <th>Time</th>
